force-app/main/default/objects/Assessment__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Class</fullName>
            </value>
            <value>
                <fullName>Take Home</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Open Notes</fullName>
            </value>
            <value>
                <fullName>Closed Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>