force-app/main/default/objects/Assessment__c/fields/AverageGrade__c.field-meta.xml
<CustomField>
    <fullName>AverageGrade__c</fullName>
    <formula>TotalGrade__c  /  NumberOfGrades__c</formula>
    <label>Average Grade</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>