force-app/main/default/objects/Assessment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade</label>
    <referenceTo>Grade__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>