force-app/main/default/objects/Assessment__c/fields/MaxGrade__c.field-meta.xml
<CustomField>
    <fullName>MaxGrade__c</fullName>
    <label>Max Grade</label>
    <summarizedField>Grade__c.Grade__c</summarizedField>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>