force-app/main/default/objects/Assessment__c/fields/MinGrade__c.field-meta.xml
<CustomField>
    <fullName>MinGrade__c</fullName>
    <label>Min Grade</label>
    <summarizedField>Grade__c.Grade__c</summarizedField>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>