force-app/main/default/objects/Assessment__c/fields/NumberOfGrades__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGrades__c</fullName>
    <label>Number Of Grades</label>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>