force-app/main/default/objects/Assessment__c/fields/Retake__c.field-meta.xml
<CustomField>
    <fullName>Retake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retake</label>
    <type>Checkbox</type>
</CustomField>