force-app/main/default/objects/Assessment__c/fields/TimeGiven__c.field-meta.xml
<CustomField>
    <fullName>TimeGiven__c</fullName>
    <label>Time Given</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>