force-app/main/default/objects/Assessment__c/fields/TotalGrade__c.field-meta.xml
<CustomField>
    <fullName>TotalGrade__c</fullName>
    <label>Total Grade</label>
    <summarizedField>Grade__c.Grade__c</summarizedField>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>