force-app/main/default/objects/Assessment__c/recordTypes/MyHomeworkRecordType.recordType-meta.xml
<RecordType>
    <fullName>MyHomeworkRecordType</fullName>
    <active>true</active>
    <label>My Homework Record Type</label>
</RecordType>