force-app/main/default/objects/Assessment__c/recordTypes/MyProjectRecordType.recordType-meta.xml
<RecordType>
    <fullName>MyProjectRecordType</fullName>
    <active>true</active>
    <label>My Project Record Type</label>
</RecordType>