force-app/main/default/objects/Assessment__c/recordTypes/MyQuizRecordType.recordType-meta.xml
<RecordType>
    <fullName>MyQuizRecordType</fullName>
    <active>true</active>
    <label>My Quiz Record Type</label>
</RecordType>